pushing final comparison

--- a/finetuned_comparison.ipynb
+++ b/finetuned_comparison.ipynb
@@ -40,7 +40,7 @@
         "sns.set_style(\"whitegrid\")\n",
         "plt.rcParams['figure.dpi'] = 100\n",
         "\n",
-        "print(\"✓ Setup complete\")"
+        "print(\"\u2713 Setup complete\")"
       ]
     },
     {
@@ -86,7 +86,7 @@
         "ABBREV = {'cognitive_ability': 'ca', 'experience': 'exp', 'problem_solving': 'ps', \n",
         "          'reliability': 'rel', 'professionalism': 'prof', 'communication': 'comm'}\n",
         "\n",
-        "print(\"✓ Config loaded\")"
+        "print(\"\u2713 Config loaded\")"
       ]
     },
     {
@@ -133,11 +133,11 @@
         "for key, path in FILE_PATHS.items():\n",
         "    try:\n",
         "        data[key] = load_and_standardize(path, key)\n",
-        "        print(f\"  ✓ {key}: {len(data[key])} samples\")\n",
+        "        print(f\"  \u2713 {key}: {len(data[key])} samples\")\n",
         "    except Exception as e:\n",
-        "        print(f\"  ⚠️  {key}: {str(e)[:50]}\")\n",
+        "        print(f\"  \u26a0\ufe0f  {key}: {str(e)[:50]}\")\n",
         "\n",
-        "print(f\"\\n✓ Loaded {len(data)} datasets\")"
+        "print(f\"\\n\u2713 Loaded {len(data)} datasets\")"
       ]
     },
     {
@@ -194,7 +194,7 @@
         "        results[key] = calc_metrics(data[key], data['human'])\n",
         "        print(f\"  {MODELS_CONFIG[key]['label']}: MAE={results[key]['mae']:.3f}, ICC={results[key]['icc']:.3f}\")\n",
         "\n",
-        "print(\"\\n✓ Metrics calculated\")"
+        "print(\"\\n\u2713 Metrics calculated\")"
       ]
     },
     {
@@ -210,30 +210,61 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Latency\n",
-        "print(\"Extracting latency...\")\n",
+        "# Extract latency and costs from actual data\n",
+        "print(\"Extracting latency and costs from data...\")\n",
+        "print(\"=\"*70)\n",
+        "\n",
         "for key in results.keys():\n",
-        "    lat_cols = [c for c in data[key].columns if 'latency' in c.lower() and 'ms' in c.lower()]\n",
+        "    df = data[key]\n",
+        "    cfg = MODELS_CONFIG[key]\n",
+        "    \n",
+        "    # LATENCY\n",
+        "    lat_cols = [c for c in df.columns if 'latency' in c.lower() and 'ms' in c.lower()]\n",
         "    if lat_cols:\n",
-        "        results[key]['latency_ms'] = data[key][lat_cols[0]].median()\n",
-        "        results[key]['total_latency_ms'] = results[key]['latency_ms'] * MODELS_CONFIG[key]['k']\n",
-        "        print(f\"  {MODELS_CONFIG[key]['label']}: {results[key]['latency_ms']:.0f}ms (×{MODELS_CONFIG[key]['k']} = {results[key]['total_latency_ms']:.0f}ms)\")\n",
+        "        # K-runs might have rewrite_latency_ms (this is per sample, already includes all K runs)\n",
+        "        results[key]['latency_ms'] = df[lat_cols[0]].median()\n",
+        "        results[key]['total_latency_ms'] = results[key]['latency_ms']  # Already total for K runs\n",
         "    else:\n",
         "        results[key]['latency_ms'] = np.nan\n",
         "        results[key]['total_latency_ms'] = np.nan\n",
+        "    \n",
+        "    # COST\n",
+        "    # For K-runs, use actual total_cost from data (already includes K runs)\n",
+        "    if 'total_cost' in df.columns:\n",
+        "        # This is the actual cost per candidate (already averaged over K runs)\n",
+        "        cost_per_cand = df['total_cost'].mean()\n",
+        "        results[key]['cost_per_cand'] = cost_per_cand\n",
+        "        results[key]['cost_250'] = cost_per_cand * 250\n",
+        "        results[key]['cost_source'] = 'actual'\n",
+        "    \n",
+        "    # For fine-tuned, calculate from config\n",
+        "    elif key == 'finetuned':\n",
+        "        # Fine-tuned uses same token costs but only K=1\n",
+        "        AVG_IN_TOKENS, AVG_OUT_TOKENS = 1000, 100\n",
+        "        inf_cost = AVG_IN_TOKENS * cfg['cost_in'] + AVG_OUT_TOKENS * cfg['cost_out']\n",
+        "        train_cost = cfg.get('training_cost', 0)\n",
+        "        \n",
+        "        results[key]['cost_per_cand'] = inf_cost + (train_cost / 250)\n",
+        "        results[key]['cost_250'] = inf_cost * 250 + train_cost\n",
+        "        results[key]['training_cost'] = train_cost\n",
+        "        results[key]['cost_source'] = 'estimated+training'\n",
+        "    \n",
+        "    else:\n",
+        "        # Fallback estimation\n",
+        "        AVG_IN_TOKENS, AVG_OUT_TOKENS = 1000, 100\n",
+        "        inf_cost = (AVG_IN_TOKENS * cfg['cost_in'] + AVG_OUT_TOKENS * cfg['cost_out']) * cfg['k']\n",
+        "        results[key]['cost_per_cand'] = inf_cost\n",
+        "        results[key]['cost_250'] = inf_cost * 250\n",
+        "        results[key]['cost_source'] = 'estimated'\n",
+        "    \n",
+        "    print(f\"  {cfg['label']}:\")\n",
+        "    print(f\"    Latency: {results[key].get('latency_ms', 0):.0f}ms (total for K={cfg['k']})\")\n",
+        "    print(f\"    Cost: ${results[key]['cost_per_cand']:.4f}/cand (source: {results[key].get('cost_source', 'unknown')})\")\n",
+        "    if key == 'finetuned':\n",
+        "        print(f\"    Training cost: ${cfg.get('training_cost', 0):.2f} (one-time)\")\n",
         "\n",
-        "# Costs\n",
-        "print(\"\\nCalculating costs...\")\n",
-        "AVG_IN_TOKENS, AVG_OUT_TOKENS = 1000, 100\n",
-        "for key in results.keys():\n",
-        "    cfg = MODELS_CONFIG[key]\n",
-        "    inf_cost = (AVG_IN_TOKENS * cfg['cost_in'] + AVG_OUT_TOKENS * cfg['cost_out']) * cfg['k']\n",
-        "    train_cost = cfg.get('training_cost', 0)\n",
-        "    results[key]['cost_per_cand'] = inf_cost + train_cost/250\n",
-        "    results[key]['cost_250'] = inf_cost * 250 + train_cost\n",
-        "    print(f\"  {cfg['label']}: ${results[key]['cost_per_cand']:.4f}/cand, ${results[key]['cost_250']:.2f}/250\")\n",
-        "\n",
-        "print(\"\\n✓ Complete\")"
+        "print(\"\\n\" + \"=\"*70)\n",
+        "print(\"\u2713 Latency and cost data extracted\")\n"
       ]
     },
     {
@@ -257,7 +288,7 @@
         "        'K': MODELS_CONFIG[key]['k'],\n",
         "        'MAE': res['mae'],\n",
         "        'ICC': res['icc'],\n",
-        "        'Within ±1%': res['within_1'],\n",
+        "        'Within \u00b11%': res['within_1'],\n",
         "        'Total Latency (ms)': res['total_latency_ms'],\n",
         "        'Cost/Cand ($)': res['cost_per_cand'],\n",
         "        'Cost 250 ($)': res['cost_250'],\n",
@@ -269,14 +300,14 @@
         "print(\"\\n\" + \"=\"*80)\n",
         "print(\"COMPREHENSIVE RESULTS\")\n",
         "print(\"=\"*80)\n",
-        "print(df[['Model', 'K', 'MAE', 'ICC', 'Within ±1%', 'Total Latency (ms)', 'Cost/Cand ($)']].to_string(index=False))\n",
+        "print(df[['Model', 'K', 'MAE', 'ICC', 'Within \u00b11%', 'Total Latency (ms)', 'Cost/Cand ($)']].to_string(index=False))\n",
         "\n",
         "print(\"\\n\" + \"=\"*80)\n",
         "print(\"BEST PERFORMERS\")\n",
         "print(\"=\"*80)\n",
-        "print(f\"🎯 Best Accuracy: {df.iloc[0]['Model']} (MAE={df.iloc[0]['MAE']:.3f})\")\n",
-        "print(f\"💰 Lowest Cost: {df.sort_values('Cost/Cand ($)').iloc[0]['Model']} (${df.sort_values('Cost/Cand ($)').iloc[0]['Cost/Cand ($)']:.4f}/cand)\")\n",
-        "print(f\"⚡ Fastest: {df.sort_values('Total Latency (ms)').iloc[0]['Model']} ({df.sort_values('Total Latency (ms)').iloc[0]['Total Latency (ms)']:.0f}ms total)\")"
+        "print(f\"\ud83c\udfaf Best Accuracy: {df.iloc[0]['Model']} (MAE={df.iloc[0]['MAE']:.3f})\")\n",
+        "print(f\"\ud83d\udcb0 Lowest Cost: {df.sort_values('Cost/Cand ($)').iloc[0]['Model']} (${df.sort_values('Cost/Cand ($)').iloc[0]['Cost/Cand ($)']:.4f}/cand)\")\n",
+        "print(f\"\u26a1 Fastest: {df.sort_values('Total Latency (ms)').iloc[0]['Model']} ({df.sort_values('Total Latency (ms)').iloc[0]['Total Latency (ms)']:.0f}ms total)\")"
       ]
     },
     {
@@ -333,10 +364,10 @@
         "# 4. Agreement\n",
         "ax = axes[1, 0]\n",
         "x = np.arange(len(df))\n",
-        "ax.bar(x, df['Within ±1%'], color=colors, edgecolor='black', alpha=0.8)\n",
+        "ax.bar(x, df['Within \u00b11%'], color=colors, edgecolor='black', alpha=0.8)\n",
         "ax.set_xticks(x)\n",
         "ax.set_xticklabels([m.split('(')[0] for m in df['Model']], rotation=45, ha='right', fontsize=8)\n",
-        "ax.set_ylabel('Within ±1 (%)', fontweight='bold')\n",
+        "ax.set_ylabel('Within \u00b11 (%)', fontweight='bold')\n",
         "ax.set_title('Agreement Rate')\n",
         "ax.axhline(80, color='green', linestyle='--', alpha=0.5)\n",
         "ax.grid(axis='y', alpha=0.3)\n",
@@ -397,29 +428,29 @@
         "    print(\"\\n\" + \"=\"*80)\n",
         "    print(\"ROI ANALYSIS: Fine-tuned (K=1) vs GPT-4o (K=5)\")\n",
         "    print(\"=\"*80)\n",
-        "    print(f\"\\n💰 COST:\")\n",
+        "    print(f\"\\n\ud83d\udcb0 COST:\")\n",
         "    print(f\"   Training (one-time): ${training_cost:.2f}\")\n",
         "    print(f\"   Savings per candidate: ${savings_per_cand:.4f}\")\n",
         "    print(f\"   Break-even: {breakeven:.0f} candidates\")\n",
         "    print(f\"   Savings @ 1000 candidates: ${savings_per_cand * 1000:.2f}\")\n",
         "    \n",
-        "    print(f\"\\n⚡ SPEED:\")\n",
+        "    print(f\"\\n\u26a1 SPEED:\")\n",
         "    print(f\"   K=5: {k5['total_latency_ms']:.0f}ms total\")\n",
         "    print(f\"   K=1: {ft['total_latency_ms']:.0f}ms total\")\n",
         "    print(f\"   Improvement: {latency_improvement:.1f}% faster\")\n",
         "    \n",
-        "    print(f\"\\n🎯 ACCURACY:\")\n",
+        "    print(f\"\\n\ud83c\udfaf ACCURACY:\")\n",
         "    print(f\"   K=5 MAE: {k5['mae']:.3f}\")\n",
         "    print(f\"   K=1 MAE: {ft['mae']:.3f}\")\n",
         "    print(f\"   Change: {mae_change:+.1f}% {'(worse)' if mae_change > 0 else '(better)'}\")\n",
         "    \n",
-        "    print(f\"\\n📊 RECOMMENDATION:\")\n",
+        "    print(f\"\\n\ud83d\udcca RECOMMENDATION:\")\n",
         "    if breakeven <= 500 and abs(mae_change) < 5:\n",
-        "        print(f\"   ✅ STRONG ROI: Break-even at {breakeven:.0f} candidates with maintained accuracy\")\n",
+        "        print(f\"   \u2705 STRONG ROI: Break-even at {breakeven:.0f} candidates with maintained accuracy\")\n",
         "    elif breakeven <= 1000:\n",
-        "        print(f\"   ✅ Good ROI: Break-even at {breakeven:.0f} candidates\")\n",
+        "        print(f\"   \u2705 Good ROI: Break-even at {breakeven:.0f} candidates\")\n",
         "    else:\n",
-        "        print(f\"   ⚠️  High volume needed: Break-even at {breakeven:.0f} candidates\")\n",
+        "        print(f\"   \u26a0\ufe0f  High volume needed: Break-even at {breakeven:.0f} candidates\")\n",
         "    \n",
         "    print(\"\\n\" + \"=\"*80)"
       ]
